fix color and alignment

--- a/frontend/src/styles/DescriptionBox.css
+++ b/frontend/src/styles/DescriptionBox.css
@@ -1,10 +1,10 @@
 .description-wrapper {
-  width: 55%;
+  width: 93%;
 }
 
 .description-wrapper .nav-buttons {
   display: flex;
-  gap: 10px;
+  gap: 265px;
   margin-bottom: 15px;
 }
 
